added VERSION and COPYING files
darcs-hash:20070110171033-23886-a30289abe9f6ae5d041412c237f5cfe8a41dbf3e.gz

--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-All information is available at
-http://www.chimeric.de/projects/dokuwiki/plugin/lastfm.
+LastFm Plugin for DokuWiki
 
-Author: Michael Klier <chi@chimeric.de>
+All documentation for the LastFm Plugin is available online at:
+http://www.chimeric.de/projects/dokuwiki/plugin/lastfm
+
+(c) 2005 - 2007 by Michael Klier <chi@chimeric.de>
+See COPYING for license info.
